<?xml version="1.0"?>
<package>
  <name>ultrasonics</name>
  <version>0.10.2</version>
  <description>
    This package is used for ultrasonics range sensors to obstacle detection or range readings.
  </description>
  <maintainer email="info@sinusoidal.com.tr">Sinusoidal</maintainer>

  <license>BSD</license>
  <author email="hbarisyalcinoz@sinusoidal.com.tr">Hakan Baris YALCINOZ</author>
  <author email="mkaya@sinusoidal.com.tr">Murat KAYA</author>
  <author email="mcomert@sinusoidal.com.tr">Mustafa COMERT</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_filters</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_filters</run_depend>

</package>
